--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
 Description: This package provides some alternatives to sf functions,
     which are implemented using duckdb and geoarrow. So far the only
     implemented function is areal interpolation working similar to the one
-    fiund in 'areal' package, but much faster. I have no idea where this
+    found in 'areal' package, but much faster. I have no idea where this
     project will go, use at your own risk.
 License: MIT + file LICENSE
 URL: https://github.com/e-kotov/ducksf , http://www.ekotov.pro/ducksf/
